Fixed unsafe casts, etc.